src/App.scss
/* ----------------------------------
  1. Import Google Fonts (CSS only)
---------------------------------- */
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');


/* ----------------------------------
5. Custom Variables and colors
---------------------------------- */
@import "./assets/style/custom-variables.scss";
 

/* ----------------------------------
3. Custom Components (after utilities)
---------------------------------- */
.btn-primary {
  background-image: linear-gradient(45deg, $primary-gradient-start, $primary-gradient-end);
  border: 1px solid rgba($primary, 0.25) !important;
  color: #fff !important;
  transition: background-image 0.3s ease-in-out;

  &:hover {
    background-image: linear-gradient(45deg, darken($primary-gradient-start, 10%), darken($primary-gradient-end, 10%));
    color: #fff;
  }

  &:focus,
  &:active {
    background-image: linear-gradient(45deg, darken($primary-gradient-start, 12%), darken($primary-gradient-end, 12%));
    box-shadow: 0 0 0 0.25rem rgba($primary, 0.5);
  }
}

.btn-outline-primary {
  background-color: transparent;
  background-image: none;
  border: 1px solid $primary !important;
  color: $primary !important;
  transition: all 0.3s ease-in-out;

  &:hover {
    background-image: linear-gradient(45deg, $primary-gradient-start, $primary-gradient-end);
    border-color: transparent !important;
    color: #fff !important;
  }

  &:focus,
  &:active {
    background-image: linear-gradient(45deg, darken($primary-gradient-start, 12%), darken($primary-gradient-end, 12%));
    box-shadow: 0 0 0 0.25rem rgba($primary, 0.5);
    border-color: transparent !important;
    color: #fff !important;
  }
}

.btn-primary.btn-custom {
  background-image: linear-gradient(to bottom, $primary-gradient-start, $primary-gradient-end);
  border: transparent !important;
}

/* ----------------------------------
4. Bootstrap Version - 5.3.3
---------------------------------- */
@import "bootstrap/scss/bootstrap";

/* ----------------------------------
5. Bootstrap Icons
---------------------------------- */
@import "~bootstrap-icons/font/bootstrap-icons";


html,
body {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  // overflow-x: hidden;
  margin: 0;
}

.font-inter {
  font-family: "Inter", sans-serif;
}

.font-roboto {
  font-family: "Roboto", sans-serif;
}

.main-heading {
  color: #101828;
  font-size: 1.5rem;
  // font-size: clamp(22px, 3vw, 30px);
  font-family: "Inter", sans-serif;
  font-weight: 700;
  line-height: normal;
}

.fs-10 {
  font-size: 10px !important;
}

.fs-12 {
  font-size: 12px !important;
}

.fs-14 {
  font-size: 14px !important;
}

.fs-16 {
  font-size: 16px !important;
}

.fs-18 {
  font-size: 18px !important;
}

.pointer {
  cursor: pointer;
}

.container-fluid {
  @include media-breakpoint-up(xl) {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.btn {
  min-height: 40px;
}

.btn-custom {
  font-size: 18px;
  min-height: 54px;
  min-width: 150px;
  padding: 6px 1.5rem;
  transition: all 0.3s;
}

.child-modal-backdrop {
  z-index: 1055;
}

.form-label {
  color: #344054;
  // font-size: $font-size-base;
  // font-weight: $font-weight-medium;
  margin-bottom: 5px;
}

.form-check-label {
  color: #717b9e;
  font-weight: 400;
}

.form-check-input:checked+.form-check-label {
  color: var(--bs-body-color);
}

.form-control,
.form-select {
  color: var(--bs-body-color);
  font-size: 14px;
  min-height: 44px;
}

.form-control::placeholder {
  color: $placeholder-clr;
  font-size: 14px;
}

.form-control::-webkit-input-placeholder {
  /* Chrome/Opera/Safari */
  color: $placeholder-clr;
  font-size: 14px;
}

.form-control::-moz-placeholder {
  color: $placeholder-clr;
  font-size: 14px;
}

.form-control:-moz-placeholder {
  color: $placeholder-clr;
  font-size: 14px;
}

.form-control:-ms-input-placeholder {
  /* IE 10+ */
  color: $placeholder-clr;
  font-size: 14px;
}

/* select box placeholder css */
select:required:invalid {
  color: $placeholder-clr;
  font-size: 14px;
}

/* input type date calender css */
input[type="date"]:invalid::-webkit-datetime-edit,
input[type="month"]:invalid::-webkit-datetime-edit,
input[type="time"]:invalid::-webkit-datetime-edit {
  color: $placeholder-clr;
  font-size: 14px;
}

// Global custom input style

input[type="time"]:invalid:before {
  content: attr(placeholder);
  color: #6c757d !important;
  position: absolute;
  background: #fff;
  font-size: $font-size-sm;
}

// Input search box
.searchfield-wrapper {
  position: relative;

  input {
    padding-left: 35px;
  }

  .icon {
    position: absolute;
    top: 50%;
    left: 12px;
    transform: translateY(-50%);
  }
}

// Custom Scrollbar CSS
::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background: #9c9c9c;
  border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

// Table style customization
.table-custom-wrapper {
  border: 1px solid var(--bs-border-color);
  border-radius: 8px;
}

// React Quill Customization
.ql-container .ql-editor {
  min-height: 200px;
}

// react-phone-input-2 styyle customization
.main-content {
  .react-tel-input {
    .form-control {
      border-color: $input-border-color;
      border-radius: $input-border-radius;
      background-color: transparent;
    }

    .flag-dropdown {
      border-color: $input-border-color;
      border-top-left-radius: $input-border-radius;
      border-bottom-left-radius: $input-border-radius;
    }
  }
}

// Start: React-slick NPM customize style
.custom-select {
  .custom-select__control {
    border-color: $input-border-color;
    border-radius: $input-border-radius;
    min-height: 44px;

    &:hover {
      border-color: $input-border-color;
    }

    &.custom-select__control--is-focused {
      border-color: $input-border-color;
      outline: 0;
      box-shadow: 0 0 0 0.25rem rgba($primary, 0.25)
    }

    .custom-select__value-container {
      column-gap: 5px;
    }

    .custom-select__placeholder {
      color: $placeholder-clr;
      font-size: 14px;
    }

    .custom-select__multi-value__label {
      padding-left: 8px;
    }

    .custom-select__multi-value__remove {
      padding-right: 5px;
    }

    .custom-select__multi-value {
      background-color: #F2F4F7;
      border-radius: 50px;
    }
  }
}

// End: React-slick NPM customize style

// Date Picker npm customization
.react-datepicker-wrapper {
  min-width: 240px;

  .react-datepicker__input-container {
    display: inline-flex;
    align-items: center;

    .react-datepicker__calendar-icon {
      margin-left: 3px;

      path {
        fill: $body-color;
      }
    }

    input {
      padding-left: 30px;
    }

    .react-datepicker__close-icon {
      padding-right: 10px;
    }
  }
}

// Start: Top Header Css
.top-header {
  .nav-link {
    &.active {
      background-color: $theme2;
      border-radius: 6px;
    }
  }

  .dropdown {
    list-style-type: none;
  }

  .account-menu {
    .dropdown-menu {
      top: 9px !important;
      width: 200px;

      .dropdown-item {
        display: flex;
        align-items: center;
        gap: 8px;
      }
    }

    .dropdown-toggle:after {
      display: none;
    }
  }

  .chip-wrapper .chip-img {
    height: 32px;
    width: 32px;
  }
}

.main-content-wrapper {
  width: 100%;
  min-height: 100vh;
  transition: all 0.3s;
}

.main-content {
  width: calc(100% - 220px);
  margin-left: 220px;
  transition: all 0.3s;
}

.sidebar.collapsed~.main-content {
  width: calc(100% - 80px);
  margin-left: 80px;
}

// End: Top Header CSS

// Start: Sidebar CSS
.sidebar {
  background-color: $theme3;
  color: white;
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  min-height: 100vh;
  width: 220px;
  transition: all 0.3s;

  .sidebar-logo {
    img {
      max-width: 55px;
      object-fit: contain;
    }
  }

  &.collapsed {
    width: 80px;

    li a {
      width: 50px;
      justify-content: center;
      margin: 0 auto;
    }
  }


  .sidebar-item-cover {
    >li {
      margin: 0 8px;
    }

    >li>a {
      font-size: 15px;
      color: $white;
      border-radius: 6px;
      padding: 10px 12px;
      text-align: left;
      text-transform: capitalize;
      transition: .35s ease-out;
      white-space: nowrap;

      i.bi {
        font-size: 18px;

        &:before {
          font-weight: 600 !important;
        }
      }

      &:hover,
      &:focus,
      &:hover img,
      &.active img,
      &:focus img {
        color: $white;
        opacity: 1;
      }

      &.active {
        color: #5F6368;
        background-color: $theme2;
        font-weight: 600;
        padding: 10px 12px;
      }

      img {
        width: 16px;
        filter: invert(1);
        opacity: 1;
        transition: .35s ease-out;
      }
    }
  }

  .sub-menu {
    margin: 10px 0 0 20px;

    li {
      &:not(:last-child) {
        margin-bottom: 5px;
      }

      a {
        color: $white;
        display: block;
        font-size: 15px;
        text-decoration: none;
        white-space: nowrap;

        &:hover,
        &.active {
          color: $theme2;
        }
      }
    }
  }
}

// End: Sidebar CSS

// Start: Common CSS for all pages to adjust the height of input field to 40px which is within filter-wrapper div
.filter-wrapper {
  .searchfield-wrapper {
    width: 100%;

    @include media-breakpoint-up(sm) {
      max-width: 315px;
    }
  }

  .form-control,
  .form-select {
    min-height: 40px;
  }
}

// End: Common CSS for all pages to adjust the height of input field to 40px which is within filter-wrapper div

// Start: Common Menubar CSS
.menubar-wrapper {
  li a {
    font-size: $font-size-base;
    font-weight: $font-weight-medium;
    border-bottom: 4px solid transparent;
    color: $body-color;
    padding: 10px 1rem 8px;
    text-align: left;
    text-transform: capitalize;
    transition: .35s ease-out;
    white-space: nowrap;

    &:hover,
    &:focus,
    &:hover img,
    &.active img,
    &:focus img {
      color: $black;
      opacity: 1;
    }

    &.active {
      color: $black;
      border-color: $primary;
    }

    img {
      width: 16px;
      filter: invert(1);
      opacity: 1;
      transition: .35s ease-out;
    }
  }
}

// End: Common Menubar CSS


// Common Tabs Design
.common-tabs-wrapper.nav-tabs {
  border: 0;

  li {
    button {
      color: $body-color;
      background-color: $theme2;
      border: 0;
      border-radius: 0;
      min-height: 40px;

      &.active {
        background-image: linear-gradient(to bottom, $primary-gradient-start, $primary-gradient-end);
        color: $white;
        transition: background-image 0.3s ease-in-out;
        text-shadow: 0px 4px 4px rgba($black, 0.25);
      }

      &:focus {
        box-shadow: none !important;
      }
    }

    &:first-child button {
      border-top-left-radius: 0.5rem;
      border-bottom-left-radius: 0.5rem;
    }

    &:last-child button {
      border-top-right-radius: 0.5rem;
      border-bottom-right-radius: 0.5rem;
    }
  }
}

